--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <!-- Favicon Icon -->
     <link
       rel="shortcut icon"
-      href="./public/images/efavicon.png"
+      href="/public/images/efavicon.png"
       type="image/png"
     />
 
@@ -22,9 +22,9 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="./public/css/app.css" />
-    <link rel="stylesheet" href="./public/css/animate.css" />
-    <link rel="stylesheet" href="./public/css/theme.css" />
+    <link rel="stylesheet" href="/public/css/app.css" />
+    <link rel="stylesheet" href="/public/css/animate.css" />
+    <link rel="stylesheet" href="/public/css/theme.css" />
 
     <title>e-Sago Capital</title>
     <link
@@ -78,7 +78,7 @@
                     <!-- Company logo-->
                     <img
                       class="h-16 w-auto"
-                      src="./public/images/logo-small.png"
+                      src="/public/images/logo-small.png"
                       alt="Logo"
                     />
                   </a>
@@ -179,7 +179,7 @@
             <div class="image 2xl:pl-25">
               <img
                 class="h-96 -mt-14 lg:h-[32rem] 2xl:h-[40rem] lg:mt-0"
-                src="./public/images/femalecoaching.png"
+                src="/public/images/femalecoaching.png"
                 alt="Header Image"
               />
             </div>
@@ -359,7 +359,7 @@
       <section id="why" class="about_area pt-20 relative bg-slate-50 pb-20">
         <div class="about_image flex items-end justify-end">
           <div class="image lg:pr-13">
-            <img src="./public/images/discussion.png" alt="about" />
+            <img src="/public/images/discussion.png" alt="about" />
           </div>
         </div>
         <!-- about image -->
@@ -586,7 +586,7 @@
                   <div class="single_team mx-3">
                     <div class="team_image relative">
                       <img
-                        src="./public/images/team-1.jpg"
+                        src="/public/images/team-1.jpg"
                         alt="team"
                         class="w-full"
                       />
@@ -632,7 +632,7 @@
                   <div class="single_team mx-3">
                     <div class="team_image relative">
                       <img
-                        src="./public/images/team-2.jpg"
+                        src="/public/images/team-2.jpg"
                         alt="team"
                         class="w-full"
                       />
@@ -684,7 +684,7 @@
       <section id="contact" class="contact_area relative pt-20 pb-20">
         <div class="contact_image flex items-center justify-end">
           <div class="image lg:pr-13">
-            <img src="./public/images/contact.svg" alt="contact" />
+            <img src="/public/images/contact.svg" alt="contact" />
           </div>
         </div>
         <!-- about image -->
@@ -783,12 +783,12 @@
       <div
         class="shape absolute left-0 top-0 opacity-5 h-full overflow-hidden w-1/3"
       >
-        <img src="./public/images/footer-shape-left.png" alt="" />
+        <img src="/public/images/footer-shape-left.png" alt="" />
       </div>
       <div
         class="shape absolute right-0 top-0 opacity-5 h-full overflow-hidden w-1/3"
       >
-        <img src="./public/images/footer-shape-right.png" alt="" />
+        <img src="/public/images/footer-shape-right.png" alt="" />
       </div>
       <div class="container">
         <div class="footer_widget pt-18 pb-120">
@@ -797,7 +797,7 @@
               <div class="footer_about mt-13 mx-3">
                 <div class="footer_logo">
                   <a title="logo-image" href="#"
-                    ><img src="./public/images/logo-footer.png" alt=""
+                    ><img src="/public/images/logo-footer.png" alt=""
                   /></a>
                 </div>
               </div>
@@ -904,8 +904,8 @@
     <!--====== App js ======-->
     <script src="/public/js/app.js"></script>
     <!--====== Tiny Slider js ======-->
-    <script src="./public/js/tiny-slider.js"></script>
+    <script src="/public/js/tiny-slider.js"></script>
     <!--====== Wow js ======-->
-    <script src="./public/js/wow.min.js"></script>
+    <script src="/public/js/wow.min.js"></script>
   </body>
 </html>
