--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
                   <a class="navbar-brand mr-5" href="index.html">
                     <!-- Company logo-->
                     <img
-                      class="h-12 w-auto"
+                      class="max-h-16 w-auto"
                       src="/images/logo-small.png"
                       alt="Logo"
                     />
